# LLMPractice

./: README.md  app.py  modeltest.py  openai_app.py  pyproject.toml
